# rtorrent-mcp

./: .env.example  .gitignore  Dockerfile  README.md  history.md  pyproject.toml
deploy/: DEPLOY.md  rtorrent-mcp.service
src/rtorrent_mcp/: __init__.py  config.py  context.py  models.py  server.py  tools.py
src/rtorrent_mcp/clients/: rtorrent.py  scgi.py
tests/: conftest.py  test_scgi.py  test_tools.py
